Update Kyubey_fr_FR.properties (POEditor.com)

--- a/Kyubey_fr_FR.properties
+++ b/Kyubey_fr_FR.properties
@@ -275,3 +275,25 @@ manageWebhooks = manage webhooks
 manageEmojis = manage emojis
 # localized_perms
 createInstantInvite = create instant invite
+# search
+role_not_found = Sorry **{{username}}**, I couldn't find that role\!
+# commands
+invalid_argument_type = Sorry **{{username}}**, but your argument at position **{{pos}}** has to be of type **{{type}}** but type **{{given_type}}** was given\!
+# commands
+server_only_command = Sorry **{{username}}**, but this command can only be used in a server\!
+# commands
+nsfw_only_command = Sorry **{{username}}**, but this command can only be used in a channel with NSFW enabled\!
+# music
+next = Next\: {{song}}
+# music
+not_connected = Sorry **{{username}}**, but I'm not connected to a voice channel (yet)\!
+# settings
+current_prefixes = Current prefixes\: {{prefixes}}
+# music
+resumed = Resumed the music\!
+# music
+added_to_queue = Added {{song}} to the queue\!
+# music
+added_to_queue_playlist = Added {{num}} tracks from playlist {{playlist}} to the queue\!
+# settings
+remove_no_prefix = No prefixes to remove\!
