Update Kyubey_de_DE.properties (POEditor.com)

--- a/Kyubey_de_DE.properties
+++ b/Kyubey_de_DE.properties
@@ -218,60 +218,82 @@ ignored_channel = Kanal ignorieren..
 # settings
 unignored_channel = Kanal unignoriert\!
 # settings
-messagelogs_enabled = 🔓 Enabled message logs\!
+messagelogs_enabled = Nachrichten-Protokoll aktiviert\!
 # settings
-messagelogs_disabled = 🔒 Disabled message logs\!
+messagelogs_disabled = Nachrichten-Protokoll deaktiviert\!
 # settings
-messagelogs_aleady_enabled = 🚫 Message logs are already enabled\!
+messagelogs_aleady_enabled = Nachrichten-Protokoll ist schon aktiviert\!
 # settings
-messagelogs_already_disabled = 🚫 Message logs are already disabled\!
+messagelogs_already_disabled = Nachrichten-Protokoll ist schon deaktiviert\!
 # search
-no_images_found = Sorry **{{username}}**, but I couldn't find any images matching your query\!
+no_images_found = Entschuldigung **{{username}}**, aber ich konnte keine Bilder finden, die mit deiner Abfrage übereinstimmt\!
 # info
 tags = Tags
 # commands
-pruned_msgs = Pruned `{{number}}` message(s)\!
+pruned_msgs = Ich habe `{{number}}` Nachrichten gekürzt\!
 # settings
-set_starboard = Set starboard to {{channel}}\!
+set_starboard = Das Starboard ist nun auf {{channel}} gesetzt\! 
 # localized_perms
-manageGuild = manage guild
+manageGuild = Verwalte Gilde
 # localized_perms
-kickMembers = kick members
+kickMembers = Personen kicken
 # localized_perms
-banMembers = ban members
+banMembers = Personen bannen
 # localized_perms
-administrator = administrator
+administrator = Administrator
 # localized_perms
-manageChannels = manage channels
+manageChannels = Verwalte Kanäle
 # localized_perms
-addReactions = add reactions
+addReactions = Füge Reaktionen hinzu
 # localized_perms
-viewAuditLogs = view audit log
+viewAuditLogs = Zeige Prüfungsprotokoll an
 # localized_perms
-readMessages = read messages
+readMessages = Lese Nachrichten
 # localized_perms
-sendMessages = send messages
+sendMessages = Sende Nachrichten
 # localized_perms
-manageMessages = manage messages
+manageMessages = Verwalte Nachrichten
 # localized_perms
-embedLinks = embed links
+embedLinks = Eingebettete Links
 # localized_perms
-attachFiles = attach files
+attachFiles = Dateien anfügen
 # localized_perms
-voiceConnect = connect to voice channel
+voiceConnect = Verbinde zum Voice-Kanal
 # localized_perms
-voiceSpeak = speak in voice channel
+voiceSpeak = Sprich in Voice-Kanal
 # localized_perms
-voiceMoveMembers = move members between voice channels
+voiceMoveMembers = Verschiebe Personen zwischen Voice-Kanälen
 # localized_perms
-changeNickname = change nickname
+changeNickname = Spitznamen ändern
 # localized_perms
-manageNicknames = manage nicknames
+manageNicknames = Spitznamen verwalten
 # localized_perms
-manageRoles = manage roles
+manageRoles = Rollen verwalten
 # localized_perms
-manageWebhooks = manage webhooks
+manageWebhooks = Webhooks verwalten
 # localized_perms
-manageEmojis = manage emojis
+manageEmojis = Emojis verwalten
 # localized_perms
-createInstantInvite = create instant invite
+createInstantInvite = Erstelle sofortige Einladung
+# search
+role_not_found = Sorry **{{username}}**, I couldn't find that role\!
+# commands
+invalid_argument_type = Sorry **{{username}}**, but your argument at position **{{pos}}** has to be of type **{{type}}** but type **{{given_type}}** was given\!
+# commands
+server_only_command = Sorry **{{username}}**, but this command can only be used in a server\!
+# commands
+nsfw_only_command = Sorry **{{username}}**, but this command can only be used in a channel with NSFW enabled\!
+# music
+next = Next\: {{song}}
+# music
+not_connected = Sorry **{{username}}**, but I'm not connected to a voice channel (yet)\!
+# settings
+current_prefixes = Current prefixes\: {{prefixes}}
+# music
+resumed = Resumed the music\!
+# music
+added_to_queue = Added {{song}} to the queue\!
+# music
+added_to_queue_playlist = Added {{num}} tracks from playlist {{playlist}} to the queue\!
+# settings
+remove_no_prefix = No prefixes to remove\!
