Update Kyubey_de_DE.properties (POEditor.com)

--- a/Kyubey_de_DE.properties
+++ b/Kyubey_de_DE.properties
@@ -297,3 +297,141 @@ added_to_queue = Added {{song}} to the queue\!
 added_to_queue_playlist = Added {{num}} tracks from playlist {{playlist}} to the queue\!
 # settings
 remove_no_prefix = No prefixes to remove\!
+# commands
+no_images_channel = Sorry **{{{username}}**, but I couldn't find any images in this channel\!
+# music
+autoplay_on = Autoplay is now on\!
+# music
+autoplay_off = Autoplay is now off\!
+# moderation
+user_cant_ban = Sorry **{{username}}**, but you can't ban that user\!
+# moderation
+bot_cant_ban = Sorry **{{username}}**, but I can't ban that user\!
+# moderation
+banned_user = Banned **{{username}}**\!
+# moderation
+perm_cant_ban = I couldn't ban **{{username}}** because I'm missing the **{{permission}}** permission\!
+# commands
+cleaned_messages = Cleaned **{{num}}** of my messages\!
+# commands
+user_no_contract = Sorry **{{username}}**, but **{{user}}** hasn't made a contract with me (yet)\!
+# commands
+contract_title = **{{username}}'s** contract.
+# commands
+tag_exists = Sorry **{{username}}**, but that tag already exists\!
+# commands
+tag_created = Tag **{{name}}** created\!
+# commands
+script_exists = Sorry **{{username}}**, but that script already exists\!
+# commands
+added_script = Added script **{{name}}**\!
+# commands
+script_not_found = Sorry **{{username}}**, but that script doesn't exist\!
+# commands
+cant_delete_script = Sorry **{{username}}**, but you can't delete this script\!
+# commands
+deleted_script = Deleted script **{{name}}**\!
+# commands
+cant_edit_script = Sorry **{{username}}**, but you can't edit this script\!
+# commands
+edited_script = Edited script **{{name}}**\!
+# commands
+owner_only_script = Sorry **{{username}}**, but this script is owner-only\!
+# tags
+tag_not_found = Sorry **{{username}}**, but that tag doesn't exist (yet)\!
+# tags
+tag_not_owner = Sorry **{{username}}**, but you don't own this tag\!
+# tags
+tag_created = Added tag **{{name}}**\!
+# tags
+tag_edited = Edited tag **{{name}}**\!
+# commands
+not_married = Sorry **{{username}}**, but you aren't married to anyone\!
+# moderation
+user_cant_kick = Sorry **{{username}}**, but you can't kick that user\!
+# moderation
+bot_cant_kick = Sorry **{{username}}**, but I can't kick that user\!
+# moderation
+perm_cant_kick = I couldn't kick **{{username}}** because I'm missing the **{{permission}}** permission\!
+# moderation
+kicked_user = Kicked **{{username}}**\!
+# commands
+already_married = Sorry **{{username}}**, but you are already married to **{{user}}**\!
+# commands
+cant_marry_self = Sorry **{{username}}**, but you can't marry yourself\!
+# commands
+cant_marry_bot = Sorry **{{username}}**, but you can't marry bots\!
+# commands
+user_already_married = Sorry **{{username}}**, but **{{user}}** is already married to **{{user2}}**\!
+# commands
+propose_marriage = {{user}}, **{{username}}**, wants to marry you\! What is your answer?
+# commands
+marriage_declined = **{{username}}** declined\! 💔
+# commands
+marriage_accepted = **{{username}}** is now married to **{{user}}**\! 💖
+# moderation
+no_muted_role = Sorry **{{username}}**, but you haven't set the mute role yet\!
+# moderation
+muted_role_deleted = Sorry **{{username}}**, but I couldn't find the mute role\!
+# moderation
+perm_cant_mute = I couldn't mute **{{username}}** because I'm missing the **{{permission}}** permission\!
+# moderation
+muted_user = Muted **{{username}}**\!
+# music
+no_matching_songs = Sorry **{{username}}**, but I couldn't find any matches\!
+# settings
+perfix_added = Added prefix `{{prefix}}`\!
+# settings
+prefix_removed = Removed prefix `{{prefix}}`\!
+# commands
+pruned_messages = Pruned **{{num}}** messages\!
+# commands
+give_rating = I'd rate {{thing}} {{num}}/10\!
+# moderation
+no_modlog_channel = Sorry **{{username}}**, but the modlog channel isn't set\!
+# moderation
+reason_too_long = Sorry *{{username}}**, but your reason is longer than 512 characters\!
+# moderation
+case_num_err = Sorry **{{username}}**, but the first case number is larger than the last case number\!
+# commands
+reminder_set = OK\! I'll remind you {{what}} at {{date}}\!
+# commands
+reminder_specify_date = Sorry **{{username}}**, but you have to give me a time\!
+# commands
+reminder_err = Sorry **{{username}}**, I didn't get that, could you say that again?
+# moderation
+roleme_added_role = Added role **{{role}}** to user assignable roles\!
+# moderation
+roleme_cant_assign = Sorry **{{username}}**, but you can't add that role to yourself\!
+# moderation
+roleme_perm_cant_assign = Sorry **{{username}}**, but I can't assign roles to you since your role is higher than mine\!
+# moderation
+roleme_assigned = You now have the **{{role}}** role\!
+# moderation
+roleme_removed = You no longer have the **{{role}}** role\!
+# moderation
+roleme_cant_remove = Sorry **{{username}}**, but you can't remove that role from yourself\!
+# moderation
+roleme_removed_role = Removed role **{{role}}** from user assignable roles\!
+# commands
+users_with_discrim = Users with discriminator {{discriminator}}\:
+# commands
+happy_shipping = Happy shipping\!\nYour shipname\: **{{shipname}}**
+# moderation
+logs_not_enabled = Sorry **{{username}}**, but logs aren't enabled here\!
+# moderation
+sniped_by = Sniped by {{user}}
+# moderation
+no_snipes = No snipes found\!
+# search
+no_results = I couldn't find any results\!
+# moderation
+not_muted = Sorry **{{username}}**, but that user isn't muted\!
+# moderation
+unmuted_user = Unmuted **{{username}}**\!
+# moderation
+perm_cant_unmute = I couldn't unmute **{{username}}** because I'm missing the **{{permission}}** permission\!
+# moderation
+unbanned_user = Unbanned {{user}}\!
+# moderation
+perm_cant_unban = I couldn't unban {{user}} because I'm missing the **{{permission}}** permission\!
