Update Kyubey_en_US.properties (POEditor.com)

--- a/Kyubey_en_US.properties
+++ b/Kyubey_en_US.properties
@@ -441,3 +441,5 @@ perm_cant_unmute = I couldn't unmute **{{username}}** because I'm missing the **
 unbanned_user = Unbanned {{user}}\!
 # moderation
 perm_cant_unban = I couldn't unban {{user}} because I'm missing the **{{permission}}** permission\!
+# commands
+command_not_found = Sorry **{{username}}**, but I couldn't find that command\!
