--- a/Kyubey_nl_NL.properties
+++ b/Kyubey_nl_NL.properties
@@ -233,7 +233,8 @@ pruned_msgs = `{{number}}` berichten verwijderd\!
 # settings
 set_starboard = Starboard gezet naar {{channel}}\!
 # localized_perms
-manageGuild = beheer server
+# Fuzzy
+manageServer = beheer server
 # localized_perms
 kickMembers = leden kicken
 # localized_perms
@@ -379,7 +380,7 @@ muted_user = Muted **{{username}}**\!
 # music
 no_matching_songs = Sorry **{{username}}**, but I couldn't find any matches\!
 # settings
-perfix_added = Added prefix `{{prefix}}`\!
+prefix_added = Added prefix `{{prefix}}`\!
 # settings
 prefix_removed = Removed prefix `{{prefix}}`\!
 # commands
