Update Kyubey_en_US.properties (POEditor.com)

--- a/Kyubey_en_US.properties
+++ b/Kyubey_en_US.properties
@@ -238,7 +238,8 @@ pruned_msgs = Pruned `{{number}}` message(s)\!
 # settings
 set_starboard = Set starboard to {{channel}}\!
 # localized_perms
-manageGuild = manage guild
+# Fuzzy
+manageServer = manage guild
 # localized_perms
 kickMembers = kick members
 # localized_perms
@@ -384,7 +385,8 @@ muted_user = Muted **{{username}}**\!
 # music
 no_matching_songs = Sorry **{{username}}**, but I couldn't find any matches\!
 # settings
-perfix_added = Added prefix `{{prefix}}`\!
+# Fuzzy
+prefix_added = Added prefix `{{prefix}}`\!
 # settings
 prefix_removed = Removed prefix `{{prefix}}`\!
 # commands
