Update Kyubey_de_DE.properties (POEditor.com)

--- a/Kyubey_de_DE.properties
+++ b/Kyubey_de_DE.properties
@@ -234,7 +234,8 @@ pruned_msgs = Ich habe `{{number}}` Nachrichten gekürzt\!
 # settings
 set_starboard = Das Starboard ist nun auf {{channel}} gesetzt\! 
 # localized_perms
-manageGuild = Verwalte Gilde
+# Fuzzy
+manageServer = Verwalte Gilde
 # localized_perms
 kickMembers = Personen kicken
 # localized_perms
@@ -380,7 +381,7 @@ muted_user = Muted **{{username}}**\!
 # music
 no_matching_songs = Sorry **{{username}}**, but I couldn't find any matches\!
 # settings
-perfix_added = Added prefix `{{prefix}}`\!
+prefix_added = Added prefix `{{prefix}}`\!
 # settings
 prefix_removed = Removed prefix `{{prefix}}`\!
 # commands
