--- a/Kyubey_es_ES.properties
+++ b/Kyubey_es_ES.properties
@@ -234,7 +234,7 @@ pruned_msgs = Pruned `{{number}}` message(s)\!
 # settings
 set_starboard = Set starboard to {{channel}}\!
 # localized_perms
-manageGuild = manage guild
+manageServer = manage guild
 # localized_perms
 kickMembers = kick members
 # localized_perms
@@ -380,7 +380,7 @@ muted_user = Muted **{{username}}**\!
 # music
 no_matching_songs = Sorry **{{username}}**, but I couldn't find any matches\!
 # settings
-perfix_added = Added prefix `{{prefix}}`\!
+prefix_added = Added prefix `{{prefix}}`\!
 # settings
 prefix_removed = Removed prefix `{{prefix}}`\!
 # commands
