Update Kyubey_de_DE.properties (POEditor.com)

--- a/Kyubey_de_DE.properties
+++ b/Kyubey_de_DE.properties
@@ -277,164 +277,164 @@ manageEmojis = Emojis verwalten
 # localized_perms
 createInstantInvite = Erstelle sofortige Einladung
 # search
-role_not_found = Sorry **{{username}}**, I couldn't find that role\!
+role_not_found = Sorry **{{username}}**, Ich konnte die Rolle nicht finden\!\n\n
 # commands
-invalid_argument_type = Sorry **{{username}}**, but your argument at position **{{pos}}** has to be of type **{{type}}** but type **{{given_type}}** was given\!
+invalid_argument_type = Sorry **{{username}}**, aber dein Argument bei der Position **{{pos}}** muss vom Typ **{{type}}** sein, aber der Typ **{{given_type}}** wurde eingegeben\!\n
 # commands
-server_only_command = Sorry **{{username}}**, but this command can only be used in a server\!
+server_only_command = Sorry  **{{username}}**, aber dieser Befehl kann nur in einen Server ausgeführt werden\!\n
 # commands
-nsfw_only_command = Sorry **{{username}}**, but this command can only be used in a channel with NSFW enabled\!
+nsfw_only_command = Sorry **{{username}}**, aber dieser Befehl kann nur in einen Channel ausgeführt werden, welcher NSFW aktiviert hat.
 # music
-next = Next\: {{song}}
+next = Nächstes\: {{song}}
 # music
-not_connected = Sorry **{{username}}**, but I'm not connected to a voice channel (yet)\!
+not_connected = Sorry **{{username}}**, aber ich bin nicht mit einen Voice-Channel verbunden (bisher)\!
 # settings
-current_prefixes = Current prefixes\: {{prefixes}}
+current_prefixes = Aktuelle Prefixes\: {{prefixes}}
 # music
-resumed = Resumed the music\!
+resumed = Die Musik wird fortgesetzt\!
 # music
-added_to_queue = Added {{song}} to the queue\!
+added_to_queue = Füge {{song}} zur Liste hinzu\!
 # music
-added_to_queue_playlist = Added {{num}} tracks from playlist {{playlist}} to the queue\!
+added_to_queue_playlist = Füge {{num}} tracks vom playlist {{playlist}} zu der Liste hinzu\!
 # settings
-remove_no_prefix = No prefixes to remove\!
+remove_no_prefix = Es gibt keine Prefixes zu löschen\!
 # commands
-no_images_channel = Sorry **{{{username}}**, but I couldn't find any images in this channel\!
+no_images_channel = Sorry  **{{{username}}**, aber ich konnte keine Bilder in diesen Channel finden\!
 # music
-autoplay_on = Autoplay is now on\!
+autoplay_on = Autoplay ist nun an\!
 # music
-autoplay_off = Autoplay is now off\!
+autoplay_off = Autoplay ist nun aus\!
 # moderation
-user_cant_ban = Sorry **{{username}}**, but you can't ban that user\!
+user_cant_ban = Sorry  **{{{username}}**, aber du kannst diesen User nicht bannen\!
 # moderation
-bot_cant_ban = Sorry **{{username}}**, but I can't ban that user\!
+bot_cant_ban = Sorry  **{{{username}}**, aber ich kann diesen User nicht bannen\!
 # moderation
-banned_user = Banned **{{username}}**\!
+banned_user = **{{{username}}** ist nun gebannt\!
 # moderation
-perm_cant_ban = I couldn't ban **{{username}}** because I'm missing the **{{permission}}** permission\!
+perm_cant_ban = Ich konnte  **{{{username}}** nicht bannen, weil mir die Berechtigung \n**{{permission}}** fehlt\!\n\n
 # commands
-cleaned_messages = Cleaned **{{num}}** of my messages\!
+cleaned_messages = **{{num}}** von meinen Nachrichten wurden gelöscht\!
 # commands
-user_no_contract = Sorry **{{username}}**, but **{{user}}** hasn't made a contract with me (yet)\!
+user_no_contract = Sorry **{{username}}**, aber  **{{user}}** hat noch keinen Pakt mit mir geschlossen (bisher)\!
 # commands
-contract_title = **{{username}}'s** contract.
+contract_title = **{{username}}'s** Pakt.
 # commands
-tag_exists = Sorry **{{username}}**, but that tag already exists\!
+tag_exists = Sorry **{{username}}**, aber dieser Tag existiert bereits\!
 # commands
-tag_created = Tag **{{name}}** created\!
+tag_created = Tag **{{name}}** erstellt\!
 # commands
-script_exists = Sorry **{{username}}**, but that script already exists\!
+script_exists = Sorry **{{username}}**, aber dieses Script existiert bereits\!
 # commands
-added_script = Added script **{{name}}**\!
+added_script = Habe das Script **{{name}}** hinzugefügt\!
 # commands
-script_not_found = Sorry **{{username}}**, but that script doesn't exist\!
+script_not_found = Sorry  **{{username}}**, aber dieses Script existiert noch nicht\!
 # commands
-cant_delete_script = Sorry **{{username}}**, but you can't delete this script\!
+cant_delete_script = Sorry  **{{username}}**, aber du kannst dieses Script nicht löschen\!
 # commands
-deleted_script = Deleted script **{{name}}**\!
+deleted_script = Script **{{name}}** wurde gelöscht\!
 # commands
-cant_edit_script = Sorry **{{username}}**, but you can't edit this script\!
+cant_edit_script = Sorry  **{{username}}**, aber du kannst dieses Script nicht bearbeiten\!
 # commands
-edited_script = Edited script **{{name}}**\!
+edited_script = Script **{{name}}** wurde bearbeitet\!
 # commands
-owner_only_script = Sorry **{{username}}**, but this script is owner-only\!
+owner_only_script = Sorry **{{username}}**, dieses Script ist nur für den Eigentümer\!
 # tags
-tag_not_found = Sorry **{{username}}**, but that tag doesn't exist (yet)\!
+tag_not_found = Sorry  **{{username}}**, aber dieser Tag existiert noch nicht (bisher)\!
 # tags
-tag_not_owner = Sorry **{{username}}**, but you don't own this tag\!
+tag_not_owner = Sorry  **{{username}}**, aber du kannst diesen Tag nicht besitzen\!
 # tags
-tag_created = Added tag **{{name}}**\!
+tag_created = Füge den Tag  **{{name}}** hinzu\!\n
 # tags
-tag_edited = Edited tag **{{name}}**\!
+tag_edited = Habe den Tag  **{{name}}** bearbeitet\!
 # commands
-not_married = Sorry **{{username}}**, but you aren't married to anyone\!
+not_married = Sorry **{{username}}**, aber du bist mit niemanden verheiratet\!
 # moderation
-user_cant_kick = Sorry **{{username}}**, but you can't kick that user\!
+user_cant_kick = Sorry **{{username}}**, aber du kannst diesen User nicht kicken\!
 # moderation
-bot_cant_kick = Sorry **{{username}}**, but I can't kick that user\!
+bot_cant_kick = Sorry **{{username}}**, aber ich kann diesen User nicht kicken\!
 # moderation
-perm_cant_kick = I couldn't kick **{{username}}** because I'm missing the **{{permission}}** permission\!
+perm_cant_kick = Ich konnte nicht den User **{{username}}** kicken, weil mir die Berechtigung \n**{{permission}}** fehlt\!
 # moderation
-kicked_user = Kicked **{{username}}**\!
+kicked_user = Habe **{{username}}** gekickt\!
 # commands
-already_married = Sorry **{{username}}**, but you are already married to **{{user}}**\!
+already_married = Sorry **{{username}}**, aber du bist schon mit **{{user}}** verheiratet\!
 # commands
-cant_marry_self = Sorry **{{username}}**, but you can't marry yourself\!
+cant_marry_self = Sorry **{{username}}**, aber du kannst dich nicht selbst heiraten\!
 # commands
-cant_marry_bot = Sorry **{{username}}**, but you can't marry bots\!
+cant_marry_bot = Sorry **{{username}}**, aber du kannst keine Bots heiraten\!
 # commands
-user_already_married = Sorry **{{username}}**, but **{{user}}** is already married to **{{user2}}**\!
+user_already_married = Sorry **{{username}}**, aber **{{user}}** ist schon verheiratet mit **{{user2}}**\!
 # commands
-propose_marriage = {{user}}, **{{username}}**, wants to marry you\! What is your answer?
+propose_marriage = {{user}}, **{{username}}** möchte mit dir heiraten\! Was ist deine Antwort?
 # commands
-marriage_declined = **{{username}}** declined\! 💔
+marriage_declined = **{{username}}** hat den Antrag abgelehnt. 💔
 # commands
-marriage_accepted = **{{username}}** is now married to **{{user}}**\! 💖
+marriage_accepted = **{{username}}** ist nun mit **{{user}}** verheiratet\! 💖
 # moderation
-no_muted_role = Sorry **{{username}}**, but you haven't set the mute role yet\!
+no_muted_role = Sorry **{{username}}**, aber du hast die Mute-Rolle noch nicht gesetzt\!
 # moderation
-muted_role_deleted = Sorry **{{username}}**, but I couldn't find the mute role\!
+muted_role_deleted = Sorry **{{username}}**, aber ich konnte die Mute-Rolle nicht finden\!
 # moderation
-perm_cant_mute = I couldn't mute **{{username}}** because I'm missing the **{{permission}}** permission\!
+perm_cant_mute = Ich konnte **{{username}}** nicht muten, weil mir die Berechtigung\n**{{permission}}** fehlt\!
 # moderation
-muted_user = Muted **{{username}}**\!
+muted_user = Habe **{{username}}** gemutet\!
 # music
-no_matching_songs = Sorry **{{username}}**, but I couldn't find any matches\!
+no_matching_songs = Sorry **{{username}}**, aber ich konnte keine Matches finden\!
 # settings
-prefix_added = Added prefix `{{prefix}}`\!
+prefix_added = Habe den Prefix `{{prefix}}` hinzugefügt\!
 # settings
-prefix_removed = Removed prefix `{{prefix}}`\!
+prefix_removed = Habe den Prefix `{{prefix}}` gelöscht\!
 # commands
-pruned_messages = Pruned **{{num}}** messages\!
+pruned_messages = Habe  **{{num}}** nachrichten gelöscht\!
 # commands
-give_rating = I'd rate {{thing}} {{num}}/10\!
+give_rating = Ich gebe {{thing}} eine {{num}}/10\!
 # moderation
-no_modlog_channel = Sorry **{{username}}**, but the modlog channel isn't set\!
+no_modlog_channel = Sorry **{{username}}**, aber der Modlog-Channel ist nicht gesetzt\!
 # moderation
-reason_too_long = Sorry *{{username}}**, but your reason is longer than 512 characters\!
+reason_too_long = Sorry **{{username}}**, aber dein Grund ist länger als 512 Buchstaben\!
 # moderation
-case_num_err = Sorry **{{username}}**, but the first case number is larger than the last case number\!
+case_num_err = Sorry **{{username}}**, aber die erste Fall-Nummer ist größer als die letzte Fall-Nummer\!
 # commands
-reminder_set = OK\! I'll remind you {{what}} at {{date}}\!
+reminder_set = OK\! Ich werde dich an  {{what}} am {{date}} erinnern\!
 # commands
-reminder_specify_date = Sorry **{{username}}**, but you have to give me a time\!
+reminder_specify_date = Sorry **{{username}}**, aber du musst mir eine Zeit geben\!
 # commands
-reminder_err = Sorry **{{username}}**, I didn't get that, could you say that again?
+reminder_err = Sorry **{{username}}**, ich konnte das nicht verstehen, kannst du es bitte nochmal sagen?
 # moderation
-roleme_added_role = Added role **{{role}}** to user assignable roles\!
+roleme_added_role = Habe die Rolle  **{{role}}** zu User-hinzufügbaren Rollen hinzugefügt\!
 # moderation
-roleme_cant_assign = Sorry **{{username}}**, but you can't add that role to yourself\!
+roleme_cant_assign = Sorry  **{{username}}**, aber du kannst dir die Rolle nicht selbst geben\!
 # moderation
-roleme_perm_cant_assign = Sorry **{{username}}**, but I can't assign roles to you since your role is higher than mine\!
+roleme_perm_cant_assign = Sorry **{{username}}**, aber ich kann dir keine Rollen geben, da deine Rolle höher ist als meine\!
 # moderation
-roleme_assigned = You now have the **{{role}}** role\!
+roleme_assigned = Du hast jetzt die **{{role}}** Rolle\!
 # moderation
-roleme_removed = You no longer have the **{{role}}** role\!
+roleme_removed = Du hast nicht mehr die **{{role}}** rolle\!
 # moderation
-roleme_cant_remove = Sorry **{{username}}**, but you can't remove that role from yourself\!
+roleme_cant_remove = Sorry **{{username}}**, aber du kannst diese Rolle nicht selbst entfernen\!
 # moderation
-roleme_removed_role = Removed role **{{role}}** from user assignable roles\!
+roleme_removed_role = Habe die Rolle **{{role}}** von den User-hinzufügbaren Rollen entfernt\!
 # commands
-users_with_discrim = Users with discriminator {{discriminator}}\:
+users_with_discrim = Benutzer mit Discriminator {{discriminator}}\:
 # commands
-happy_shipping = Happy shipping\!\nYour shipname\: **{{shipname}}**
+happy_shipping = Was für ein süßes Paar\!\nEuer Paar-Name\: **{{shipname}}**
 # moderation
-logs_not_enabled = Sorry **{{username}}**, but logs aren't enabled here\!
+logs_not_enabled = Sorry **{{username}}**, aber die Logs sind hier nicht aktiviert\!
 # moderation
-sniped_by = Sniped by {{user}}
+sniped_by = Du wurdest von {{user}} gesnipt\!
 # moderation
-no_snipes = No snipes found\!
+no_snipes = Keine Snipes gefunden\!
 # search
-no_results = I couldn't find any results\!
+no_results = Ich konnte leider nichts finden\!
 # moderation
-not_muted = Sorry **{{username}}**, but that user isn't muted\!
+not_muted = Sorry **{{username}}**, aber dieser User ist nicht gemutet\!
 # moderation
-unmuted_user = Unmuted **{{username}}**\!
+unmuted_user = Habe **{{username}}** unmuted\!
 # moderation
-perm_cant_unmute = I couldn't unmute **{{username}}** because I'm missing the **{{permission}}** permission\!
+perm_cant_unmute = Ich konnte **{{username}}** nicht unmuten, weil mir die Berechtigung \n**{{permission}}** fehlt\!
 # moderation
-unbanned_user = Unbanned {{user}}\!
+unbanned_user = Habe {{user}} entbannt\!
 # moderation
-perm_cant_unban = I couldn't unban {{user}} because I'm missing the **{{permission}}** permission\!
+perm_cant_unban = Ich konnte  {{user}} nicht entbannen, da mir die Berechtigung **{{permission}}** fehlt\!
 # commands
-command_not_found = Sorry **{{username}}**, but I couldn't find that command\!
+command_not_found = Sorry **{{username}}**, aber ich konnte diesen Befehl nicht finden\!\n
