Update Kyubey_en_US.properties (POEditor.com)

--- a/Kyubey_en_US.properties
+++ b/Kyubey_en_US.properties
@@ -445,3 +445,5 @@ unbanned_user = Unbanned {{user}}\!
 perm_cant_unban = I couldn't unban {{user}} because I'm missing the **{{permission}}** permission\!
 # commands
 command_not_found = Sorry **{{username}}**, but I couldn't find that command\!
+# commands
+reminder = Hey {{user}}\! You wanted me to remind you {{reminder}}
