Update Kyubey_de_DE.properties (POEditor.com)

--- a/Kyubey_de_DE.properties
+++ b/Kyubey_de_DE.properties
@@ -438,3 +438,5 @@ unbanned_user = Habe {{user}} entbannt\!
 perm_cant_unban = Ich konnte  {{user}} nicht entbannen, da mir die Berechtigung **{{permission}}** fehlt\!
 # commands
 command_not_found = Sorry **{{username}}**, aber ich konnte diesen Befehl nicht finden\!\n
+# commands
+reminder = Hey {{user}}\! You wanted me to remind you {{reminder}}
