Update Kyubey_nl_NL.properties (POEditor.com)

--- a/Kyubey_nl_NL.properties
+++ b/Kyubey_nl_NL.properties
@@ -298,7 +298,7 @@ added_to_queue_playlist = Added {{num}} tracks from playlist {{playlist}} to the
 # settings
 remove_no_prefix = No prefixes to remove\!
 # commands
-no_images_channel = Sorry **{{{username}}**, but I couldn't find any images in this channel\!
+no_images_channel = Sorry **{{username}}**, but I couldn't find any images in this channel\!
 # music
 autoplay_on = Autoplay is now on\!
 # music
