Update Kyubey_de_DE.properties (POEditor.com)

--- a/Kyubey_de_DE.properties
+++ b/Kyubey_de_DE.properties
@@ -440,3 +440,5 @@ perm_cant_unban = Ich konnte  {{user}} nicht entbannen, da mir die Berechtigung 
 command_not_found = Sorry **{{username}}**, aber ich konnte diesen Befehl nicht finden\!\n
 # commands
 reminder = Hey {{user}}\! You wanted me to remind you {{reminder}}
+# moderation
+no_ads = Please do not advertise here {{user}}\!
