--- a/Kyubey_es_ES.properties
+++ b/Kyubey_es_ES.properties
@@ -439,3 +439,5 @@ perm_cant_unban = I couldn't unban {{user}} because I'm missing the **{{permissi
 command_not_found = Sorry **{{username}}**, but I couldn't find that command\!
 # commands
 reminder = Hey {{user}}\! You wanted me to remind you {{reminder}}
+# moderation
+no_ads = Please do not advertise here {{user}}\!
